Improved admin settings tab label.

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3,4 +3,4 @@ en:
     admin:
       site_settings:
         categories:
-          categories: 'Categories'
+          categories: 'Categories Redirect'
